--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,7 @@
 [versions]
+min-sdk = "24"
+compile-sdk = "36"
+target-sdk = "36"
 agp = "8.13.0"
 kotlin = "2.2.10"
 coreKtx = "1.17.0"
@@ -12,6 +15,9 @@ appcompat = "1.7.1"
 material = "1.13.0"
 hilt = "2.57.1"
 androidx-room = "2.7.2"
+navigationCompose = "2.9.3"
+androidx-hilt-navigation-compose = "1.2.0"
+androidx-compose-compiler = "1.5.15"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -35,10 +41,14 @@ hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.re
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "androidx-room" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "androidx-room" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidx-room" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidx-hilt-navigation-compose" }
+androidx-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "androidx-compose-compiler" }
 
 [bundles]
 hilt =[
-    'hilt-android'
+    'hilt-android',
+    "androidx-hilt-navigation-compose"
 ]
 room = [
     'androidx-room-runtime',
@@ -46,6 +56,7 @@ room = [
 ]
 
 compilers=[
+    'androidx-compose-compiler',
     'hilt-compiler',
     'androidx-room-compiler'
 ]
