test(docs): add unit tests for ViewModels and update README with testing instructions
- Added FakeToDoRepository to simulate repository behavior in tests
- Implemented test cases for MainToDoViewModel:
  • Initial state is empty list
  • Adding todos updates state as expected
  • Search query filters todos correctly with debounce
- Implemented test cases for AddToDoViewModel:
  • Title and description update flows
  • Successful TODO addition updates repository and resets loading state
- Used kotlinx-coroutines-test for structured coroutine testing

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,8 @@ androidx-room = "2.7.2"
 navigationCompose = "2.9.3"
 androidx-hilt-navigation-compose = "1.2.0"
 androidx-compose-compiler = "1.5.15"
+kotlinxCoroutinesTest = "1.10.2"
+turbine = "1.2.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -44,6 +46,8 @@ androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidx
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidx-hilt-navigation-compose" }
 androidx-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "androidx-compose-compiler" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
+turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
 [bundles]
 hilt =[
